@@ -40,8 +40,14 @@
 
 grid.ls <- function(x=NULL, grobs=TRUE, viewports=FALSE, fullNames=FALSE,
                     recursive=TRUE, print=TRUE, flatten=TRUE, ...) {
-    listing <- gridList(x, grobs=grobs, viewports=viewports,
-                        fullNames=fullNames, recursive=recursive)
+    # If 'x' is NULL, list the grobs on the DL
+    if (is.null(x)) {
+        listing <- gridListDL(grobs=grobs, viewports=viewports,
+                              fullNames=fullNames, recursive=recursive)
+    } else {
+        listing <- gridList(x, grobs=grobs, viewports=viewports,
+                            fullNames=fullNames, recursive=recursive)
+    }
     if (flatten) {
         listing <- flattenListing(listing)
     }
@@ -57,22 +63,25 @@ grid.ls <- function(x=NULL, grobs=TRUE, viewports=FALSE, fullNames=FALSE,
     invisible(listing)
 }
 
+gridListDL <- function(x, grobs=TRUE, viewports=FALSE,
+                       fullNames=FALSE, recursive=TRUE) {
+    display.list <- grid.Call("L_getDisplayList")
+    dl.index <- grid.Call("L_getDLindex")
+    result <- lapply(display.list[1:dl.index], gridList,
+                     grobs=grobs, viewports=viewports,
+                     fullNames=fullNames, recursive=recursive)
+    names(result) <- NULL
+    class(result) <- c("gridListListing", "gridListing")
+    result
+}
+    
 gridList <- function(x, ...) {
     UseMethod("gridList")
 }
 
-# The default method lists the grobs on the DL
 gridList.default <- function(x, grobs=TRUE, viewports=FALSE,
                              fullNames=FALSE, recursive=TRUE) {
     if (is.null(x)) {
-        display.list <- grid.Call("L_getDisplayList")
-        dl.index <- grid.Call("L_getDLindex")
-        result <- lapply(display.list[1:dl.index], gridList,
-                         grobs=grobs, viewports=viewports,
-                         fullNames=fullNames, recursive=recursive)
-        names(result) <- NULL
-        class(result) <- c("gridListListing", "gridListing")
-    } else if (is.null(x)) {
         # This handles empty slots in the display list
         result <- character()
         class(result) <- "gridListing"
