@@ -12,6 +12,12 @@ Changes from grid_2.7.0 to grid_2.8.0:
 
     Problem reported by Hadley Wickham.
 
+3.  Fixed a bug in grid.ls() when attempting to list the display list
+    following the removal of a grob (i.e., so that there were NULLs
+    in the display list).
+
+    Problem reported by Felix Andrews.
+
 
 Changes from grid_2.6.0 to grid_2.7.0:
 ------------------------------------
